Changes in version 2.0.2

o FIX: ties for max gain in `TMFG`


Changes in version 2.0.1

o updated the polychoric C code to avoid out-of-bounds access errors


Changes in version 2.0.0

o MAJOR REFACTOR: the update to version 2.0.0 includes many major changes that are designed to improve the speed, reliability, and reproducibility of {EGAnet}. The goal of these changes are to eliminate common errors and streamline the code in the package to prevent future error cases. There are several function additions that are provided to facilitate modular use of the {EGAnet} package

o INTERNALS: function-specific internal functions and S3methods are now located in their respective .R files rather than elsewhere (e.g., "utils-EGAnet.R")

o SWAP: internal script usage of "utils-EGAnet.R" depracated for "helper.R" functions that are used across the package (no visible changes for the user)

o NOTE: default objective function for Leiden algorithm is set to "modularity"

o NOTE: default for Louvain unidimensional method is set to single-shot *unless* argument "consensus.method" or "consensus.iter" is specified

o ADD: stricter `*apply` functions that are roughly equivalent to `*apply` but have stricter inputs/outputs (uses `vapply` as foundation; often, slightly faster)

o ADD: `community.consensus` to apply the Consensus Clustering approach introduced by Lancichnetti & Fortunato (2012). Currently only available for the Louvain algorithm

o ADD: `community.detection` to apply community detection algorithms as a standalone function

o ADD: convenience function to convert an {igraph} object to a standard matrix (`igraph2matrix`)

o ADD: `modularity` to compute standard (absolute values) and signed modularity (implemented in C)

o ADD: `polychoric.matrix` to compute categorical correlations (implemented in C); handles missing data ("pairwise" or "listwise") as well as empty cells in the joint frequency table (see documentation: `?polychoric.matrix`)
