@@ -1,7 +1,7 @@
 Package: EGAnet
 Title: Exploratory Graph Analysis – a Framework for Estimating the Number of Dimensions in Multivariate Data using Network Psychometrics
 Version: 2.0.2
-Date: 2023-09-03
+Date: 2023-09-04
 Authors@R: c(person("Hudson", "Golino", email = "hfg9s@virginia.edu", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-1601-1447")),
 	     person("Alexander", "Christensen", email = "alexpaulchristensen@gmail.com", role = "aut", comment = c(ORCID = "0000-0002-9798-7037")),
 	     person("Robert", "Moulder", email = "rgm4fd@virginia.edu", role = "ctb", comment = c(ORCID = "0000-0001-7504-9560")),
@@ -31,6 +31,6 @@ Imports: BGGM, future, future.apply, glasso, GGally,
          network, progressr, qgraph, semPlot, sna, stats
 Suggests: fitdistrplus, fungible, gridExtra, knitr, markdown,
           pbapply, progress, psych, pwr, RColorBrewer
-URL: https://github.com/hfgolino/EGAnet
+URL: https://r-ega.net
 BugReports: https://github.com/hfgolino/EGAnet/issues
 RoxygenNote: 7.2.3
